--- a/index.html
+++ b/index.html
@@ -19,8 +19,35 @@
 
 
     <!-- Game screen start-->
-    <div>
-        
+    <div class="row">
+        <div>
+            <h1 class="">MathMATE</h1>
+            <label>_ ? _ = </label>
+        </div>
+        <div class="">
+            <div>
+                <button>+</button>
+                <button>-</button>
+                <button>/</button>
+                <button>*</button>
+            </div>
+            <div>
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+            </div>
+            <div>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+            </div>
+            <div>
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+            </div>
+            
+        </div>
     </div>
     <!-- Game screen container end-->
 
