--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <!-- Home screen container end -->
 
 
-    <!-- Game screen start-->
-    <div class="row">
+    <!-- Game screen container start-->
+    <div id="game">
         <div>
             <h1 class="">MathMATE</h1>
             <label>_ ? _ = </label>
