--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1 class="">MathMATE</h1>
             <label>_ ? _ = </label>
         </div>
-        <div class="">
+        <div class="row">
             <div>
                 <button>+</button>
                 <button>-</button>
