end scene skeleton added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Home screen container start -->
     <div>
-        
+
     </div>
     <!-- Home screen container end -->
 
@@ -55,7 +55,20 @@
 
     <!-- End screen container start-->
     <div>
-        
+        <div class="row min-vh-100 d-flex align-items-center justify-content-center">
+            <div class="col-sm-6 col-12 d-flex flex-column align-items-center justify-content-center">
+                <p>Резултат: 2/4</p>
+                <div>
+                    <button class="btn btn-primary">Play again</button>
+                    <button class="btn btn-primary">Next level</button>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <img class="img-fluid"
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Twemoji_1f600.svg/1200px-Twemoji_1f600.svg.png"
+                    alt="emoji" />
+            </div>
+        </div>
     </div>
     <!-- End screen container end -->
 
