Added button styles and change to output field

--- a/index.html
+++ b/index.html
@@ -19,34 +19,35 @@
 
 
     <!-- Game screen container start-->
-    <div id="game">
-        <div>
-            <h1 class="">MathMATE</h1>
-            <label>_ ? _ = </label>
-        </div>
-        <div class="">
-            <div>
-                <button class="btn btn-primary">+</button>
-                <button class="btn btn-primary">-</button>
-                <button class="btn btn-primary">/</button>
-                <button class="btn btn-primary">*</button>
+    <div id="game" class="container-fluid">
+        <div class="row">
+            <div class="col-md-5">
+                <h1 class="">MathMATE</h1>
+                <h2 id="task" class=".text-primary .bg-danger">Text here!</h2>
             </div>
-            <div>
-                <button class="btn btn-primary">1</button>
-                <button class="btn btn-primary">2</button>
-                <button class="btn btn-primary">3</button>
-            </div>
-            <div>
-                <button class="btn btn-primary">4</button>
-                <button class="btn btn-primary">5</button>
-                <button class="btn btn-primary">6</button>
-            </div>
-            <div>
-                <button class="btn btn-primary">7</button>
-                <button class="btn btn-primary">8</button>
-                <button class="btn btn-primary">9</button>
-            </div>
-            
+            <div class="col-md-5">
+                <div style="padding-bottom: 5px;">
+                    <button class="btn btn-primary">+</button>
+                    <button class="btn btn-primary">-</button>
+                    <button class="btn btn-primary">/</button>
+                    <button class="btn btn-primary">*</button>
+                </div>
+                <div style="padding-bottom: 5px;">
+                    <button class="btn btn-primary">1</button>
+                    <button class="btn btn-primary">2</button>
+                    <button class="btn btn-primary">3</button>
+                </div>
+                <div style="padding-bottom: 5px;">
+                    <button class="btn btn-primary">4</button>
+                    <button class="btn btn-primary">5</button>
+                    <button class="btn btn-primary">6</button>
+                </div>
+                <div style="padding-bottom: 5px;">
+                    <button class="btn btn-primary">7</button>
+                    <button class="btn btn-primary">8</button>
+                    <button class="btn btn-primary">9</button>
+                </div>
+            </div>  
         </div>
     </div>
     <!-- Game screen container end-->
