added more flexibility

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <!-- Game screen container start-->
     <div id="game" class="container-fluid">
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-5 col-sm-5">
                 <h1 class="">MathMATE</h1>
                 <h2 id="task" class=".text-primary .bg-danger">Text here!</h2>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 col-sm-5">
                 <div style="padding-bottom: 5px;">
                     <button class="btn btn-primary">+</button>
                     <button class="btn btn-primary">-</button>
