--- a/index.html
+++ b/index.html
@@ -27,25 +27,28 @@
             </div>
             <div class="col-md-5 col-sm-5">
                 <div style="padding-bottom: 5px;">
-                    <button class="btn btn-primary">+</button>
-                    <button class="btn btn-primary">-</button>
-                    <button class="btn btn-primary">/</button>
-                    <button class="btn btn-primary">*</button>
+                    <button class="btn btn-primary" id="plus">+</button>
+                    <button class="btn btn-primary" id="minus">-</button>
+                    <button class="btn btn-primary" id="deleno">/</button>
+                    <button class="btn btn-primary" id="po">*</button>
                 </div>
                 <div style="padding-bottom: 5px;">
-                    <button class="btn btn-primary">1</button>
-                    <button class="btn btn-primary">2</button>
-                    <button class="btn btn-primary">3</button>
+                    <button class="btn btn-primary" id="ëdno">1</button>
+                    <button class="btn btn-primary" id="dve">2</button>
+                    <button class="btn btn-primary" id="tri">3</button>
                 </div>
                 <div style="padding-bottom: 5px;">
-                    <button class="btn btn-primary">4</button>
-                    <button class="btn btn-primary">5</button>
-                    <button class="btn btn-primary">6</button>
+                    <button class="btn btn-primary" id="chetiri">4</button>
+                    <button class="btn btn-primary" id="pet">5</button>
+                    <button class="btn btn-primary" id="shes">6</button>
                 </div>
                 <div style="padding-bottom: 5px;">
-                    <button class="btn btn-primary">7</button>
-                    <button class="btn btn-primary">8</button>
-                    <button class="btn btn-primary">9</button>
+                    <button class="btn btn-primary" id="sedem">7</button>
+                    <button class="btn btn-primary" id="osem">8</button>
+                    <button class="btn btn-primary" id="devet">9</button>
+                </div>
+                <div class = "align-items-center" style="padding-bottom: 5px;">
+                    <button class="btn btn-primary" id="nula">0</button>
                 </div>
             </div>  
         </div>
