--- a/index.html
+++ b/index.html
@@ -1,85 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>MathMate</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <!-- Home screen container start -->
-    <div >
-        <div class="row" style="background-color:  lightblue;">
-            <div class="col-sm-6" style="background-color: lightblue;">
-                
-            </div>
-
-        </div>
+    <div>
+      <div class="row" style="background-color: lightblue">
+        <div class="col-sm-6" style="background-color: lightblue"></div>
+      </div>
     </div>
     <!-- Home screen container end -->
 
-
     <!-- Game screen container start-->
     <div id="game" class="container-fluid">
-        <div class="row">
-            <div class="col-md-5 col-sm-5">
-                <h1 class="">MathMATE</h1>
-                <h2 id="task" class=".text-primary .bg-danger">Text here!</h2>
-            </div>
-            <div class="col-md-5 col-sm-5">
-                <div style="padding-bottom: 5px;">
-                    <button class="btn btn-primary" id="plus">+</button>
-                    <button class="btn btn-primary" id="minus">-</button>
-                    <button class="btn btn-primary" id="deleno">/</button>
-                    <button class="btn btn-primary" id="po">*</button>
-                </div>
-                <div style="padding-bottom: 5px;">
-                    <button class="btn btn-primary" id="ëdno">1</button>
-                    <button class="btn btn-primary" id="dve">2</button>
-                    <button class="btn btn-primary" id="tri">3</button>
-                </div>
-                <div style="padding-bottom: 5px;">
-                    <button class="btn btn-primary" id="chetiri">4</button>
-                    <button class="btn btn-primary" id="pet">5</button>
-                    <button class="btn btn-primary" id="shes">6</button>
-                </div>
-                <div style="padding-bottom: 5px;">
-                    <button class="btn btn-primary" id="sedem">7</button>
-                    <button class="btn btn-primary" id="osem">8</button>
-                    <button class="btn btn-primary" id="devet">9</button>
-                </div>
-                <div class = "align-items-center" style="padding-bottom: 5px;">
-                    <button class="btn btn-primary" id="nula">0</button>
-                </div>
-            </div>  
+      <div class="row">
+        <div class="col-md-5 col-sm-5">
+          <h1 class="">MathMATE</h1>
+          <h2 id="task" class=".text-primary .bg-danger">Text here!</h2>
         </div>
-    </div> -->
+        <div class="col-md-5 col-sm-5">
+          <div style="padding-bottom: 5px">
+            <button class="btn btn-primary" id="plus">+</button>
+            <button class="btn btn-primary" id="minus">-</button>
+            <button class="btn btn-primary" id="deleno">/</button>
+            <button class="btn btn-primary" id="po">*</button>
+          </div>
+          <div style="padding-bottom: 5px">
+            <button class="btn btn-primary" id="ëdno">1</button>
+            <button class="btn btn-primary" id="dve">2</button>
+            <button class="btn btn-primary" id="tri">3</button>
+          </div>
+          <div style="padding-bottom: 5px">
+            <button class="btn btn-primary" id="chetiri">4</button>
+            <button class="btn btn-primary" id="pet">5</button>
+            <button class="btn btn-primary" id="shes">6</button>
+          </div>
+          <div style="padding-bottom: 5px">
+            <button class="btn btn-primary" id="sedem">7</button>
+            <button class="btn btn-primary" id="osem">8</button>
+            <button class="btn btn-primary" id="devet">9</button>
+          </div>
+          <div style="padding-bottom: 5px">
+            <button class="btn btn-primary" id="nula">0</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Game screen container end-->
-
 
     <!-- End screen container start-->
     <div>
-        <div class="row min-vh-100 d-flex align-items-center justify-content-center">
-            <div class="col-sm-6 col-12 d-flex flex-column align-items-center justify-content-center">
-                <p>Резултат: 2/4</p>
-                <div>
-                    <button class="btn btn-primary">Play again</button>
-                    <button class="btn btn-primary">Next level</button>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <img class="img-fluid"
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Twemoji_1f600.svg/1200px-Twemoji_1f600.svg.png"
-                    alt="emoji" />
-            </div>
+      <div
+        class="row min-vh-100 d-flex align-items-center justify-content-center"
+      >
+        <div
+          class="col-sm-6 col-12 d-flex flex-column align-items-center justify-content-center"
+        >
+          <p>Резултат: 2/4</p>
+          <div>
+            <button class="btn btn-primary">Play again</button>
+            <button class="btn btn-primary">Next level</button>
+          </div>
         </div>
+        <div class="col-sm-6">
+          <img
+            class="img-fluid"
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Twemoji_1f600.svg/1200px-Twemoji_1f600.svg.png"
+            alt="emoji"
+          />
+        </div>
+      </div>
     </div>
     <!-- End screen container end -->
-
-</body>
-
+  </body>
 </html>
