--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="game.js"></script>
 </head>
 
 <body>
@@ -27,7 +28,7 @@
             </div>
             <div class="col-md-5 col-sm-5">
                 <div style="padding-bottom: 5px;">
-                    <button class="btn btn-primary">+</button>
+                    <button onclick="plus()" class="btn btn-primary">+</button>
                     <button class="btn btn-primary">-</button>
                     <button class="btn btn-primary">/</button>
                     <button class="btn btn-primary">*</button>
