--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <button class="btn btn-primary">-</button>
                     <button class="btn btn-primary">/</button>
                     <button class="btn btn-primary">*</button>
+                </div>
                 <div style="padding-bottom: 5px;">
                     <button class="btn btn-primary" id="ëdno">1</button>
                     <button class="btn btn-primary" id="dve">2</button>
@@ -57,7 +58,7 @@
                 </div>
             </div>  
         </div>
-    </div> -->
+    </div>
     <!-- Game screen container end-->
 
 
