--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-
     <!-- Home screen container start -->
     <div >
         <div class="row" style="background-color:  lightblue;">
@@ -25,36 +24,38 @@
 
 
     <!-- Game screen container start-->
-    <div id="game" class="container-fluid">
+    <div id="game" class="container-fluid" style="background-color: #5cdb7e">
         <div class="row">
             <div class="col-md-5 col-sm-5">
                 <h1 class="">MathMATE</h1>
                 <h2 id="task" class=".text-primary .bg-danger">Text here!</h2>
             </div>
-            <div class="col-md-5 col-sm-5">
+            <div class="col-md-5 col-sm-5" style="text-align: center;">
                 <div style="padding-bottom: 5px;">
-                    <button onclick="plus()" class="btn btn-primary">+</button>
-                    <button class="btn btn-primary">-</button>
-                    <button class="btn btn-primary">/</button>
-                    <button class="btn btn-primary">*</button>
+                    
+                    
                 </div>
                 <div style="padding-bottom: 5px;">
                     <button class="btn btn-primary" id="ëdno">1</button>
                     <button class="btn btn-primary" id="dve">2</button>
                     <button class="btn btn-primary" id="tri">3</button>
+                    <button onclick="plus()" class="btn btn-primary" style="margin-left: 10px;">+</button>
                 </div>
                 <div style="padding-bottom: 5px;">
                     <button class="btn btn-primary" id="chetiri">4</button>
                     <button class="btn btn-primary" id="pet">5</button>
                     <button class="btn btn-primary" id="shes">6</button>
+                    <button class="btn btn-primary" style="margin-left: 10px;">-</button>
                 </div>
                 <div style="padding-bottom: 5px;">
                     <button class="btn btn-primary" id="sedem">7</button>
                     <button class="btn btn-primary" id="osem">8</button>
                     <button class="btn btn-primary" id="devet">9</button>
+                    <button class="btn btn-primary" style="margin-left: 10px;">/</button>
                 </div>
                 <div class = "align-items-center" style="padding-bottom: 5px;">
                     <button class="btn btn-primary" id="nula">0</button>
+                    <button class="btn btn-primary" style="margin-left: 10px;">*</button>
                 </div>
             </div>  
         </div>
