--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             <img class= "img-fluid" src="./images/emoji.png" alt="emoji" />
           </div>
         
-      <!-- </div> -->
+      </div>
     </div>
     <!-- Home screen container end -->
 
     <!-- Game screen container start-->
-    <div id="game" class="container-fluid">
+    <div id="game" class="container-fluid" style="background-color: lightblue;">
         <div class="row">
             <div class="col-md-5 col-sm-5">
                 <h1 class="">MathMATE</h1>
@@ -73,7 +73,7 @@
 
     <!-- End screen container start-->
     <div>
-        <div class="row min-vh-100 d-flex align-items-center justify-content-center">
+        <div class="row min-vh-100 d-flex align-items-center justify-content-center" style="background-color: lightblue;">
             <div class="col-sm-6 col-12 d-flex flex-column align-items-center justify-content-center">
                 <p>Резултат: 2/4</p>
                 <div>
