background colour change

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <!-- End screen container start-->
     <div>
-        <div class="row min-vh-100 d-flex align-items-center justify-content-center" style="background-color: lightblue;">
+        <div class="row min-vh-100 d-flex align-items-center justify-content-center" style="background-color: lightbluegit;">
             <div class="col-sm-6 col-12 d-flex flex-column align-items-center justify-content-center">
                 <p>Резултат: 2/4</p>
                 <div>
