--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
     <div class="row min-vh-100" style="background-color: lightblue">
       <div class="d-flex align-items-center justify-content-center">
         <div class="col-sm-12 col-md-6 ">
-            <p>
-                <h1 class="text-center" style="color: rgb(36, 36, 123); font-size: 90px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; ">
-                    MathMate
-                </h1>
-            </p>
+            <h1 class="text-center" style="color: rgb(36, 36, 123); font-size: 90px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; ">
+                MathMate
+            </h1>
         </div>
         
           <div class="col-sm-12 col-md-6 "  >
@@ -75,7 +73,7 @@
     <div>
         <div class="row min-vh-100 d-flex align-items-center justify-content-center" style="background-color: lightblue;">
             <div class="col-sm-6 col-12 d-flex flex-column align-items-center justify-content-center">
-                <p>Резултат: 2/4</p>
+                <p style="border: solid 3px #24247b; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px;">Result: 2/5</p>
                 <div>
                     <button class="btn btn-primary">Play again</button>
                     <button class="btn btn-primary">Next level</button>
