--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
     <script src="game.js"></script>
 </head>
 
-<body>
+<body style="background-color: lightblue;">
     <!-- Home screen container start -->
-    <div class="row min-vh-100" style="background-color: lightblue">
+    <div class="row min-vh-100">
       <div class="d-flex align-items-center justify-content-center">
-        <div class="col-sm-12 col-md-6 ">
-            <p>
+        <div class="col-sm-12 col-md-6 align-items-center">
+            
                 <h1 class="text-center" style="color: rgb(36, 36, 123); font-size: 90px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; ">
                     MathMate
                 </h1>
-            </p>
+                <button type="button" class="btn btn-light" style="width: 20%;">Play</button>
         </div>
-        
           <div class="col-sm-12 col-md-6 "  >
             <img class= "img-fluid" src="./images/emoji.png" alt="emoji" />
           </div>
@@ -33,7 +32,7 @@
     <!-- Home screen container end -->
 
     <!-- Game screen container start-->
-    <div id="game" class="container-fluid" style="background-color: lightblue;">
+    <div id="game" class="container-fluid">
         <div class="row">
             <div class="col-md-5 col-sm-5">
                 <h1 class="">MathMATE</h1>
@@ -73,7 +72,7 @@
 
     <!-- End screen container start-->
     <div>
-        <div class="row min-vh-100 d-flex align-items-center justify-content-center" style="background-color: lightblue;">
+        <div class="row min-vh-100 d-flex align-items-center justify-content-center">
             <div class="col-sm-6 col-12 d-flex flex-column align-items-center justify-content-center">
                 <p>Резултат: 2/4</p>
                 <div>
