--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
 </head>
 
 <body>
-<<<<<<< HEAD
-=======
-
-  <body>
->>>>>>> 605d7996cb939810514f05f82610cfdb5b86e2a5
     <!-- Home screen container start -->
     <div class="row min-vh-100" style="background-color: lightblue">
       <div class="d-flex align-items-center justify-content-center">
@@ -49,27 +44,28 @@
                     
                     
                 </div>
-                <div style="padding-bottom: 5px;">
-                    <button class="btn btn-primary" id="ëdno">1</button>
-                    <button class="btn btn-primary" id="dve">2</button>
-                    <button class="btn btn-primary" id="tri">3</button>
-                    <button onclick="plus()" class="btn btn-primary" style="margin-left: 10px;">+</button>
+                <div style="padding-bottom: 7px;">
+                    <button class="btn btn-primary" id="one">1</button>
+                    <button class="btn btn-primary" id="two">2</button>
+                    <button class="btn btn-primary" id="three">3</button>
+                    <button onclick="plus()" class="btn btn-primary" style="margin-left: 20px; padding: 6px 13px;">+</button>
                 </div>
-                <div style="padding-bottom: 5px;">
-                    <button class="btn btn-primary" id="chetiri">4</button>
-                    <button class="btn btn-primary" id="pet">5</button>
-                    <button class="btn btn-primary" id="shes">6</button>
-                    <button class="btn btn-primary" style="margin-left: 10px;">-</button>
+                <div style="padding-bottom: 7px;">
+                    <button class="btn btn-primary" id="foure">4</button>
+                    <button class="btn btn-primary" id="five">5</button>
+                    <button class="btn btn-primary" id="six">6</button>
+                    <button class="btn btn-primary" style="margin-left: 20px; padding: 7px 15px;">-</button>
                 </div>
-                <div style="padding-bottom: 5px;">
-                    <button class="btn btn-primary" id="sedem">7</button>
-                    <button class="btn btn-primary" id="osem">8</button>
-                    <button class="btn btn-primary" id="devet">9</button>
-                    <button class="btn btn-primary" style="margin-left: 10px;">/</button>
+                <div style="padding-bottom: 7px;">
+                    <button class="btn btn-primary" id="seven">7</button>
+                    <button class="btn btn-primary" id="eight">8</button>
+                    <button class="btn btn-primary" id="nine">9</button>
+                    <button class="btn btn-primary" style="margin-left: 20px; padding: 7px 15px;">/</button>
                 </div>
-                <div class = "align-items-center" style="padding-bottom: 5px;">
-                    <button class="btn btn-primary" id="nula">0</button>
-                    <button class="btn btn-primary" style="margin-left: 10px;">*</button>
+                <div style="padding-bottom: 7px;">
+                    <button class="btn btn-primary" id="zero">0</button>
+                    <button class="btn btn-primary" style="padding: 7px 17px;" id="enter">Enter</button>
+                    <button class="btn btn-primary" style="margin-left: 21px; padding: 7px 15px;">*</button>
                 </div>
             </div>  
         </div>
