--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                     <button class="btn btn-primary" style="padding: 7px 17px;" id="enter">Enter</button>
                     <button class="btn btn-primary" style="margin-left: 21px; padding: 7px 15px;">*</button>
                 </div>
+                <div>
+                    <button class="btn btn-danger" style="padding: 7px 69px;" id="Clear">Clear</button>
+                </div>
             </div>  
         </div>
     </div>
