--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <body style="background-color: lightblue;">
     <!-- Home screen container start -->
     <div class="row min-vh-100">
-        <div class="d-flex align-items-center justify-content-center">
-            <div class="col-sm-8 col-md-8 flex-column align-items-center justify-content-center">
-                <h1 style="color:#24247b; font-size: 90px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; ">MathMate</h1>
-                <button type="button" class="btn btn-light" style="width: 20%;">Play</button>
+        <div class="d-flex flex-column flex-md-row align-items-center justify-content-center">
+            <div class="flex-column align-items-center justify-content-center" style="text-align: center;">
+                <h1 style="color:#24247b; font-size: 14vw; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; ">MathMate</h1>
+                <button class="btn btn-light btn-lg" style="background-color: #37a3e6; border: 2px solid #1c9ae8; padding-inline: 20%; margin-top: 5px;">Play</button>
+                <button class="btn btn-light btn-lg" style="background-color: #37a3e6; border: 2px solid #1c9ae8; padding-inline: 20%; margin-top: 5px;">Info</button>
             </div>
-            <div class="col-sm-3 col-md-4 ">
-                <img class="img-fluid" src="./images/emoji.png" alt="emoji" />
+            <div class="col-7 col-sm-8 col-md-3 col-lg-3 align-self-center justify-content-center">
+                <img class="img-fluid" src="./images/emoji.png" alt="emoji" style="margin-top: 40px;;"/>
             </div>
-
         </div>
     </div>
     <!-- Home screen container end -->
