--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>MathMate</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="game.js"></script>
@@ -12,15 +12,17 @@
 
 <body style="background-color: lightblue;">
     <!-- Home screen container start -->
-    <div class="row min-vh-100">
-        <div class="d-flex flex-column flex-md-row align-items-center justify-content-center">
-            <div class="flex-column align-items-center justify-content-center" style="text-align: center;">
-                <h1 style="color:#24247b; font-size: 14vw; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; ">MathMate</h1>
-                <button class="btn btn-light btn-lg" style="background-color: #37a3e6; border: 2px solid #1c9ae8; padding-inline: 20%; margin-top: 5px;">Play</button>
-                <button class="btn btn-light btn-lg" style="background-color: #37a3e6; border: 2px solid #1c9ae8; padding-inline: 20%; margin-top: 5px;">Info</button>
+    <div class="container-fluid row min-vh-100">
+        <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
+            <div class="d-flex flex-column align-items-center justify-content-center">
+                <h1 class="text-center" style="color:#24247b; font-size: 12vw; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; ">MathMate</h1>
+                <div class="d-flex flex-row align-items-center justify-content-center">
+                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #37a3e6; border: 2px solid #1c9ae8; width: 25vw; height: 5vh; margin-top: 5px;">Play</button>
+                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #37a3e6; border: 2px solid #1c9ae8; width: 25vw; height: 5vh; margin-top: 5px;">Info</button>    
+                </div>
             </div>
-            <div class="col-7 col-sm-8 col-md-3 col-lg-3 align-self-center justify-content-center">
-                <img class="img-fluid" src="./images/emoji.png" alt="emoji" style="margin-top: 40px;;"/>
+            <div class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
+                <img class="img-fluid" src="./images/emoji.png" alt="emoji" style="margin-top: 40px;"/>
             </div>
         </div>
     </div>
@@ -28,10 +30,10 @@
 
     <!-- Game screen container start-->
     <div id="game" class="container-fluid">
-        <div class="row">
-            <div class="col-md-5 col-sm-5">
-                <h1 class="">MathMATE</h1>
-                <h2 id="task" class="text-primary">Text here!</h2>
+        <div class="row d-flex flex-column flex-md-row align-items-center justify-content-center">
+            <div class="col-md-5 col-sm-5 align-self-center justify-content-center" style="margin-bottom: 30px;">
+                <h1 style="color:#24247b; font-size: 8vw; ">MathMATE</h1>
+                <h2 id="task" class="text-primary" style="border: 3px solid #1c9ae8; border-radius: 5px; padding-left: 5px;">Text here!</h2>
             </div>
             <div class="col-md-5 col-sm-5" style="text-align: center;">
                 <style>
@@ -97,7 +99,7 @@
                         style="margin-left: 20px; padding: 6px 13px;">+</button>
                 </div>
                 <div style="padding-bottom: 2px;">
-                    <button class="btn btn-primary btn-lg btn3d" id="foure">4</button>
+                    <button class="btn btn-primary btn-lg btn3d" id="four">4</button>
                     <button class="btn btn-primary btn-lg btn3d" id="five">5</button>
                     <button class="btn btn-primary btn-lg btn3d" id="six">6</button>
                     <button class="btn btn-primary btn-lg btn3d" style="margin-left: 20px; padding: 8px 15px;">-</button>
@@ -109,8 +111,8 @@
                     <button class="btn btn-primary btn-lg btn3d" style="margin-left: 20px; padding: 8px 15px;">/</button>
                 </div>
                 <div style="padding-bottom: 2x;">
-                    <button class="btn btn-primary btn-lg btn3d" id="zero">0</button>
                     <button class="btn btn-success btn-lg btn3d" style="padding: 8px 25px; " id="enter">Enter</button>
+                    <button class="btn btn-primary btn-lg btn3d" id="zero">0</button>
                     <button class="btn btn-primary btn-lg btn3d" style="margin-left: 16px; padding: 8px 15px;">*</button>
                 </div>
                 <div>
@@ -123,16 +125,16 @@
 
     <!-- End screen container start-->
     <div>
-        <div class="row min-vh-100 d-flex align-items-center justify-content-center">
-            <div class="col-sm-6 col-12 d-flex flex-column align-items-center justify-content-center">
+        <div class="row min-vh-100 flex-column align-items-center justify-content-center">
+            <div class="d-flex flex-column align-items-center">
                 <h4 style="border: solid 3px #24247b; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;">Result: 2/5</h4>
-                <div>
-                    <button class="btn btn-primary">Play again</button>
-                    <button class="btn btn-primary">Next level</button>
+                <div class="flex-row">
+                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #37a3e6; border: 2px solid #1c9ae8; width: 20vw; height: 6vh; margin-top: 5px;">Play again</button>
+                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #37a3e6; border: 2px solid #1c9ae8; width: 20vw; height: 6vh; margin-top: 5px;">Next level</button>
                 </div>
             </div>
-            <div class="col-sm-4">
-                <img class="img-fluid" src="./images/emoji.png" alt="emoji" />
+            <div class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
+                <img class="img-fluid" src="./images/emoji.png" alt="emoji" style="margin-top: 40px;"/>
             </div>
         </div>
     </div>
