--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div class="d-flex flex-column align-items-center justify-content-center">
                 <h1 class="text-center" style="color:#24247b; font-size: 12vw; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; ">MathMate</h1>
                 <div class="d-flex flex-row align-items-center justify-content-center">
-                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #37a3e6; border: 2px solid #1c9ae8; width: 25vw; height: 5vh; margin-top: 5px;">Play</button>
-                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #37a3e6; border: 2px solid #1c9ae8; width: 25vw; height: 5vh; margin-top: 5px;">Info</button>    
+                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #37a3e6; border: 2px solid #1c9ae8; width: 25vw; margin-top: 5px;">Play</button>
+                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #37a3e6; border: 2px solid #1c9ae8; width: 25vw; margin-top: 5px;">Info</button>    
                 </div>
             </div>
             <div class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
@@ -129,8 +129,8 @@
             <div class="d-flex flex-column align-items-center">
                 <h4 style="border: solid 3px #24247b; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;">Result: 2/5</h4>
                 <div class="flex-row">
-                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #37a3e6; border: 2px solid #1c9ae8; width: 20vw; height: 6vh; margin-top: 5px;">Play again</button>
-                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #37a3e6; border: 2px solid #1c9ae8; width: 20vw; height: 6vh; margin-top: 5px;">Next level</button>
+                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #37a3e6; border: 2px solid #1c9ae8; width: 20vw; margin-top: 5px;">Play again</button>
+                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #37a3e6; border: 2px solid #1c9ae8; width: 20vw; margin-top: 5px;">Next level</button>
                 </div>
             </div>
             <div class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
