--- a/index.html
+++ b/index.html
@@ -8,16 +8,72 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="game.js"></script>
+    <script src="scene_switcher.js"></script>
+    <style>
+        .btn3d {
+            position: relative;
+            top: -6px;
+            border: 0;
+            transition: all 20ms linear;
+            margin-top: 8px;
+            margin-bottom: 5px;
+            margin-left: 1px;
+            margin-right: 1px;
+        }
+            .btn3d:active:focus,
+            .btn3d:focus:hover,
+            .btn3d:focus {
+            -moz-outline-style: none;
+            outline: medium none;
+        }
+
+            .btn3d:active,
+            .btn3d.active {
+            top: 2px;
+        }
+            .btn3d.btn-success {
+            box-shadow: 0 0 0 1px #31c300 inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #5eb924, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
+            background-color: #78d739;
+        }
+
+            .btn3d.btn-success:active,
+            .btn3d.btn-success.active {
+            box-shadow: 0 0 0 1px #30cd00 inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
+            background-color: #78d739;
+        }
+
+            .btn3d.btn-primary {
+            box-shadow: 0 0 0 1px #417fbd inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #4D5BBE, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
+            background-color: #4274D7;
+        }
+
+            .btn3d.btn-primary:active,
+            .btn3d.btn-primary.active {
+            box-shadow: 0 0 0 1px #417fbd inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
+            background-color: #4274D7;
+        }
+            .btn3d.btn-danger {
+            box-shadow: 0 0 0 1px #b93802 inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #AA0000, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
+            background-color: #D73814;
+        }
+
+            .btn3d.btn-danger:active,
+            .btn3d.btn-danger.active {
+            box-shadow: 0 0 0 1px #b93802 inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
+            background-color: #D73814;
+        }
+
+    </style>
 </head>
 
 <body style="background-color: lightblue;">
     <!-- Home screen container start -->
-    <div class="container-fluid row min-vh-100">
+    <div id="homesn" class="container-fluid row min-vh-100">
         <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
             <div class="d-flex flex-column align-items-center justify-content-center">
                 <h1 class="text-center" style="color:#24247b; font-size: 12vw; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; ">MathMate</h1>
                 <div class="d-flex flex-row align-items-center justify-content-center">
-                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #37a3e6; border: 2px solid #1c9ae8; width: 25vw; margin-top: 5px;">Play</button>
+                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #37a3e6; border: 2px solid #1c9ae8; width: 25vw; margin-top: 5px;" onclick="game()">Play</button>
                     <button class="btn mx-1 btn-light btn-lg" style="background-color: #37a3e6; border: 2px solid #1c9ae8; width: 25vw; margin-top: 5px;">Info</button>    
                 </div>
             </div>
@@ -29,68 +85,14 @@
     <!-- Home screen container end -->
 
     <!-- Game screen container start-->
-    <div id="game" class="container-fluid">
+    <div id="gamesn" class="container-fluid">
         <div class="row d-flex flex-column flex-md-row align-items-center justify-content-center">
             <div class="col-md-5 col-sm-5 align-self-center justify-content-center" style="margin-bottom: 30px;">
                 <h1 style="color:#24247b; font-size: 8vw; ">MathMATE</h1>
                 <h2 id="task" class="text-primary" style="border: 3px solid #1c9ae8; border-radius: 5px; padding-left: 5px;">Text here!</h2>
             </div>
             <div class="col-md-5 col-sm-5" style="text-align: center;">
-                <style>
-                    .btn3d {
-	                    position: relative;
-	                    top: -6px;
-	                    border: 0;
-	                    transition: all 20ms linear;
-	                    margin-top: 8px;
-	                    margin-bottom: 5px;
-	                    margin-left: 1px;
-	                    margin-right: 1px;
-                    }
-                        .btn3d:active:focus,
-                        .btn3d:focus:hover,
-                        .btn3d:focus {
-	                    -moz-outline-style: none;
-	                    outline: medium none;
-                    }
-
-                        .btn3d:active,
-                        .btn3d.active {
-	                    top: 2px;
-                    }
-                        .btn3d.btn-success {
-	                    box-shadow: 0 0 0 1px #31c300 inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #5eb924, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
-	                    background-color: #78d739;
-                    }
-
-                        .btn3d.btn-success:active,
-                        .btn3d.btn-success.active {
-	                    box-shadow: 0 0 0 1px #30cd00 inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
-	                    background-color: #78d739;
-                    }
-
-                        .btn3d.btn-primary {
-	                    box-shadow: 0 0 0 1px #417fbd inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #4D5BBE, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
-	                    background-color: #4274D7;
-                    }
-
-                        .btn3d.btn-primary:active,
-                        .btn3d.btn-primary.active {
-	                    box-shadow: 0 0 0 1px #417fbd inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
-	                    background-color: #4274D7;
-                    }
-                        .btn3d.btn-danger {
-	                    box-shadow: 0 0 0 1px #b93802 inset, 0 0 0 2px rgba(255, 255, 255, 0.15) inset, 0 8px 0 0 #AA0000, 0 8px 8px 1px rgba(0, 0, 0, 0.5);
-	                    background-color: #D73814;
-                    }
-
-                        .btn3d.btn-danger:active,
-                        .btn3d.btn-danger.active {
-	                    box-shadow: 0 0 0 1px #b93802 inset, 0 0 0 1px rgba(255, 255, 255, 0.15) inset, 0 1px 3px 1px rgba(0, 0, 0, 0.3);
-	                    background-color: #D73814;
-                    }
-
-                </style>
+                
                 <div style="padding-bottom: 2px;">
                     <button class="btn btn-primary btn-lg btn3d" id="one">1</button>
                     <button class="btn btn-primary btn-lg btn3d" id="two">2</button>
@@ -124,7 +126,7 @@
     <!-- Game screen container end-->
 
     <!-- End screen container start-->
-    <div>
+    <div id="endsn">
         <div class="row min-vh-100 flex-column align-items-center justify-content-center">
             <div class="d-flex flex-column align-items-center">
                 <h4 style="border: solid 3px #24247b; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;">Result: 2/5</h4>
