minus and plus functions

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <button class="btn btn-primary btn-lg btn3d" id="four">4</button>
                     <button class="btn btn-primary btn-lg btn3d" id="five">5</button>
                     <button class="btn btn-primary btn-lg btn3d" id="six">6</button>
-                    <button class="btn btn-primary btn-lg btn3d" style="margin-left: 20px; padding: 8px 15px;">-</button>
+                    <button onclick="minus()" class="btn btn-primary btn-lg btn3d" style="margin-left: 20px; padding: 8px 15px;">-</button>
                 </div>
                 <div style="padding-bottom: 2px;">
                     <button class="btn btn-primary btn-lg btn3d" id="seven">7</button>
