--- a/index.html
+++ b/index.html
@@ -74,7 +74,23 @@
                 <h1 class="text-center" style="color:#827397; font-size: 12vw; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; ">MathMate</h1>
                 <div class="d-flex flex-row align-items-center justify-content-center">
                     <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;" onclick="game()">Play</button>
-                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;">Info</button>    
+                    <button class="btn mx-1 btn-light btn-lg" data-bs-toggle="modal" data-bs-target="#staticBackdrop" style="background-color: #827397; border: 2px solid #4D4C7D; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;">Info</button>    
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Information</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                                <div class="modal-body">
+                                Opisanie
+                                </div>
+                            </div>
+                        </div>
+                    <!-- End Modal -->                              
+                
                 </div>
             </div>
             <div class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
