keypad and clear buttons

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <button class="btn btn-primary btn-lg btn3d" style="margin-left: 20px; padding: 8px 15px;">/</button>
                 </div>
                 <div style="padding-bottom: 2x;">
-                    <button class="btn btn-danger btn-lg btn3d" style="padding: 8px 25px; " id="Clear">Clear</button>
+                    <button onclick = "clearInput()" class="btn btn-danger btn-lg btn3d" style="padding: 8px 25px; " id="clear">Clear</button>
                     <button onclick = "numeros(0)" class="btn btn-primary btn-lg btn3d" id="zero">0</button>
                     <button class="btn btn-primary btn-lg btn3d" style="margin-left: 16px; padding: 8px 15px;">*</button>
                 </div>
