--- a/index.html
+++ b/index.html
@@ -111,23 +111,23 @@
             <div class="col-md-5 col-sm-5" style="text-align: center;">
                 
                 <div style="padding-bottom: 2px;">
-                    <button class="btn btn-primary btn-lg btn3d" id="one">1</button>
-                    <button class="btn btn-primary btn-lg btn3d" id="two">2</button>
-                    <button class="btn btn-primary btn-lg btn3d" id="three">3</button>
+                    <button onclick="numeros(1)" class="btn btn-primary btn-lg btn3d" id="one">1</button>
+                    <button onclick="numeros(2)" class="btn btn-primary btn-lg btn3d" id="two">2</button>
+                    <button onclick="numeros(3)" class="btn btn-primary btn-lg btn3d" id="three">3</button>
                     <button onclick="plus()" class="btn btn-primary btn-lg btn3d"
                         style="margin-left: 20px; padding: 6px 13px;">+</button>
                 </div>
                 <div style="padding-bottom: 2px;">
-                    <button class="btn btn-primary btn-lg btn3d" id="four">4</button>
-                    <button class="btn btn-primary btn-lg btn3d" id="five">5</button>
-                    <button class="btn btn-primary btn-lg btn3d" id="six">6</button>
-                    <button class="btn btn-primary btn-lg btn3d" style="margin-left: 20px; padding: 8px 15px;">-</button>
+                    <button onclick="numeros(4)" class="btn btn-primary btn-lg btn3d" id="four">4</button>
+                    <button onclick="numeros(5)" class="btn btn-primary btn-lg btn3d" id="five">5</button>
+                    <button onclick="numeros(6)" class="btn btn-primary btn-lg btn3d" id="six">6</button>
+                    <button onclick="minus()" class="btn btn-primary btn-lg btn3d" style="margin-left: 20px; padding: 8px 15px;">-</button>
                 </div>
                 <div style="padding-bottom: 2px;">
-                    <button class="btn btn-primary btn-lg btn3d" id="seven">7</button>
-                    <button class="btn btn-primary btn-lg btn3d" id="eight">8</button>
-                    <button class="btn btn-primary btn-lg btn3d" id="nine">9</button>
-                    <button class="btn btn-primary btn-lg btn3d" style="margin-left: 20px; padding: 8px 15px;">/</button>
+                    <button onclick="numeros(7)" class="btn btn-primary btn-lg btn3d" id="seven">7</button>
+                    <button onclick="numeros(8)" class="btn btn-primary btn-lg btn3d" id="eight">8</button>
+                    <button onclick="numeros(9)" class="btn btn-primary btn-lg btn3d" id="nine">9</button>
+                    <button onclick="" class="btn btn-primary btn-lg btn3d" style="margin-left: 20px; padding: 8px 15px;">/</button>
                 </div>
                 <div style="padding-bottom: 2x;">
                     <button onclick = "clearInput()" class="btn btn-danger btn-lg btn3d" style="padding: 8px 25px; " id="clear">Clear</button>
