--- a/index.html
+++ b/index.html
@@ -68,17 +68,6 @@
   </head>
 
   <body style="background-color: #f0d9ff">
-    <!-- start container demo  structure -->
-    <div class="container d-none">
-      <div class="row">
-        <div class="col">test column 1</div>
-        <div class="col">test column 2</div>
-        <div class="col">test column 3</div>
-        <div class="col">test column 4</div>
-      </div>
-    </div>
-    <!-- end container demo  structure -->
-
     <!-- Home screen container start -->
     <div id="homesn" class="container min-vh-100">
       <div class="row">
@@ -108,7 +97,7 @@
                   color: #f0d9ff;
                   font-size: 20px;
                 "
-                onclick="game()"
+                onclick="gameStart()"
               >
                 Play
               </button>
@@ -203,7 +192,7 @@
             <button class="btn btn-primary btn-lg btn3d" style="margin-left: 16px; padding: 8px 15px">*</button>
           </div>
           <div>
-            <button class="btn btn-success btn-lg btn3d" style="padding: 8px 80px" id="enter">Enter</button>
+            <button onclick="checkAnswer()" class="btn btn-success btn-lg btn3d" style="padding: 8px 80px" id="enter">Enter</button>
           </div>
         </div>
       </div>
@@ -230,7 +219,7 @@
             <button
               class="btn mx-1 btn-light btn-lg"
               style="background-color: #827397; border: 2px solid #4d4c7d; width: 20vw; margin-top: 5px; color: #f0d9ff"
-              onclick="gameStart()"
+              onclick="homeMenu()"
             >
               Play again
             </button>
