--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="d-flex flex-column align-items-center justify-content-center">
                 <h1 class="text-center" style="color:#827397; font-size: 12vw; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; ">MathMate</h1>
                 <div class="d-flex flex-row align-items-center justify-content-center">
-                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;" onclick="game()">Play</button>
+                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;" onclick="gameStart()">Play</button>
                     <button class="btn mx-1 btn-light btn-lg" data-bs-toggle="modal" data-bs-target="#staticBackdrop" style="background-color: #827397; border: 2px solid #4D4C7D; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;">Info</button>    
 
                     <!-- Modal -->
@@ -102,7 +102,7 @@
     <!-- Home screen container end -->
 
     <!-- Game screen container start-->
-    <div id="gamesn" class="container-fluid d-none">
+    <div id="gamesn" class="container-fluid min-vh-100 d-none">
         <div class="row d-flex flex-column flex-md-row align-items-center justify-content-center">
             <div class="col-md-5 col-sm-5 align-self-center justify-content-center" style="margin-bottom: 30px;">
                 <h1 style="color:#827397; font-size: 8vw; ">MathMATE</h1>
@@ -135,7 +135,7 @@
                     <button class="btn btn-primary btn-lg btn3d" style="margin-left: 16px; padding: 8px 15px;">*</button>
                 </div>
                 <div>
-                    <button class="btn btn-success btn-lg btn3d" style="padding: 8px 80px;" id="enter">Enter</button>
+                    <button onclick="checkAnswer()" class="btn btn-success btn-lg btn3d" style="padding: 8px 80px;" id="enter">Enter</button>
                 </div>
             </div>  
         </div>
@@ -148,20 +148,13 @@
             <div class="d-flex flex-column align-items-center">
                 <h4 style="border: solid 3px #827397; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;">Result: 2/5</h4>
                 <div class="flex-row">
-                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; width: 20vw; margin-top: 5px; color: #F0D9FF;" onclick="gameStart()">Play again</button>
+                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; width: 20vw; margin-top: 5px; color: #F0D9FF;" onclick="homeMenu()">Play again</button>
                     <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; width: 20vw; margin-top: 5px;color: #F0D9FF">Next level</button>
                 </div>
             </div>
             <div class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
                 <img class="img-fluid" src="./images/emoji.png" alt="emoji" style="margin-top: 40px;"/>
             </div>
-        </div>
-        <div class="col-sm-6">
-          <img
-            class="img-fluid"
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Twemoji_1f600.svg/1200px-Twemoji_1f600.svg.png"
-            alt="emoji"
-          />
         </div>
       </div>
     <!-- End screen container end -->
