--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div id="endsn" class="d-none">
         <div class="row min-vh-100 flex-column align-items-center justify-content-center">
             <div class="d-flex flex-column align-items-center">
-                <h4 style="border: solid 3px #827397; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;">Result: 2/5</h4>
+                <h4 id="result" style="border: solid 3px #827397; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;">Result: 2/5</h4>
                 <div class="flex-row">
                     <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; width: 20vw; margin-top: 5px; color: #F0D9FF;" onclick="homeMenu()">Play again</button>
                     <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; width: 20vw; margin-top: 5px;color: #F0D9FF">Next level</button>
