modal style and information update

--- a/index.html
+++ b/index.html
@@ -87,12 +87,33 @@
                     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Information</h1>
+                    <div class="modal-header" style="background-color: #c7acda;">
+                        <h1 class="modal-title fs-5" id="staticBackdropLabel" ><b>Information</b></h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
-                                <div class="modal-body">
-                                Opisanie
+                                <div class="modal-body" style="background-color: #F0D9FF;">
+                                    <p>
+                                        <b>Welcome to MathMate!</b> - a game for entertainment and knowledge!
+                                    </p>
+                                   <li>
+                                    To start the game click the <b>"Play"</b> button.
+                                   </li>
+                                   <br>
+                                   <li>
+                                    On the game scene you have a keypad with numbers and a mathematical problem. The type of the problem can be modified by the buttons with mathematical operations. <b>You will have 5 problems to solve.</b>
+                                   </li>
+                                   <br>
+                                   <li>
+                                    Answear the problem with the keypad and then press the button <b>"Enter"</b>.
+                                   </li>
+                                   <br>
+                                   <li>
+                                    You can click the <b>"Clear"</b> button to erase your wrong answear.
+                                    </li>
+                                    <br>
+                                    <li>
+                                        When you answear all problems, the end scene will show to give you the results. Then you can choose to play again or start on the next level of difficulty.
+                                    </li>
                                 </div>
                             </div>
                         </div>
@@ -115,7 +136,7 @@
             <div class="d-flex flex-column flex-sm-row align-items-center">
                 <div class="col d-flex flex-column align-items-center">
                     <div>
-                        <h1 class="" style="color:#827397; font-size: 8vw; ">MathMATE</h1>
+                        <h1 class="" style="color:#827397; font-size: 8vw; ">MathMate</h1>
                         <h2 class="p-2 bg-body box-shadow shadow rounded" id="task" style="color: #4D4C7D; font-size: 20px;">ㅤ</h2>
                     </div>
                     
