spelling errors fixed

--- a/index.html
+++ b/index.html
@@ -104,15 +104,15 @@
                                    </li>
                                    <br>
                                    <li>
-                                    Answear the problem with the keypad and then press the button <b>"Enter"</b>.
+                                    Answer the problem with the keypad and then press the button <b>"Enter"</b>.
                                    </li>
                                    <br>
                                    <li>
-                                    You can click the <b>"Clear"</b> button to erase your wrong answear.
+                                    You can click the <b>"Clear"</b> button to erase your wrong answer.
                                     </li>
                                     <br>
                                     <li>
-                                        When you answear all problems, the end scene will show to give you the results. Then you can choose to play again or start on the next level of difficulty.
+                                        When you answer all problems, the end scene will show to give you the results. Then you can choose to play again or start on the next level of difficulty.
                                     </li>
                                 </div>
                             </div>
